# PhraseBurAnalysis

./: .gitignore  COMPREHENSIVE_ANALYSIS_SUMMARY.md  CORRECTED_LOCALIZED_SURGE_RESULTS.md  ERROR_SUMMARY.txt  LICENSE  LOCALIZED_SURGE_ANALYSIS.md  LOCALIZED_SURGE_NULL_HYPOTHESIS_TEST.md  MANN_KENDALL_ANALYSIS.md  METHODOLOGICAL_ISSUES_AND_FIXES.md  PhraseBur.csv  QUICK_FIX_GUIDE.md  README.md  RESULTS_RELIABILITY.md  SEASONAL_MANN_KENDALL_FINDINGS.md  SUMMARY_OF_FIXES.md  bur_surge.py  pyproject.toml
PhraseBurAnalysis/: bur_phrase_structure_analysis.py  bur_surge.py  bur_surge_null_model.py  bur_variation_per_phrase.py
analysis/: __init__.py  bur_phrase_structure_analysis.py  bur_surge_analysis.py  bur_variation_analysis.py
cli/: __init__.py  bur_comprehensive_cli.py  bur_histogram_cli.py  bur_localized_surge_cli.py  bur_mann_kendall_cli.py  bur_phrase_structure_cli.py  bur_surge_cli.py  bur_surge_null_model_cli.py  bur_variation_cli.py  null_model_localized.py  null_model_simulation.py  phrase_bur_null_model_cli.py  visualize_patterns.py
data/: README.md  phrasebur_filtered.csv
src/: bur_surge.py  bur_surge_null_model.py  bur_variation_per_phrase.py  plot_performer_bur_histograms.py
src.old/: bur_phrase_structure_analysis.py  bur_surge.py  bur_surge_null_model.py  phrase_bur_null_model.py
utils/: __init__.py  clean_data.py  config.py  data_utils.py
visualization/: __init__.py  bur_histograms.py
